gitops/java/petclinic/bases/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: petclinic
  namespace: petclinic
