gitops/java/petclinic/bases/deploymentconfig.yaml
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  labels:
    app: petclinic
    app.kubernetes.io/component: petclinic
    app.kubernetes.io/instance: petclinic
    app.kubernetes.io/name: java
    app.kubernetes.io/part-of: petclinic-demo
    app.openshift.io/runtime: java
    app.openshift.io/runtime-version: "8"
  name: petclinic
  namespace: petclinic
spec:
  replicas: 1
  revisionHistoryLimit: 5
  selector:
    app: petclinic
    deploymentconfig: petclinic
  strategy:
    activeDeadlineSeconds: 21600
    resources: {}
    rollingParams:
      intervalSeconds: 1
      maxSurge: 25%
      maxUnavailable: 25%
      timeoutSeconds: 600
      updatePeriodSeconds: 1
    type: Rolling
  template:
    metadata:
      labels:
        app: petclinic
        deploymentconfig: petclinic
    spec:
      containers:
      - imagePullPolicy: Always
        name: petclinic
        ports:
        - containerPort: 8080
          protocol: TCP
        - containerPort: 8443
          protocol: TCP
        - containerPort: 8778
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
  test: false
  triggers:
  - imageChangeParams:
      automatic: true
      containerNames:
      - petclinic
      from:
        kind: ImageStreamTag
        name: petclinic:latest
        namespace: cicd
    type: ImageChange
  - type: ConfigChange
