gitops/java/petclinic/bases/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: petclinic
    app.kubernetes.io/component: petclinic
    app.kubernetes.io/instance: petclinic
    app.kubernetes.io/part-of: petclinic
  name: petclinic
  namespace: petclinic
spec:
  ports:
  - name: 8080-tcp
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: petclinic
    deploymentconfig: petclinic
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
