gitops/java/petclinic/bases/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: petclinic
    app.kubernetes.io/component: petclinic
    app.kubernetes.io/instance: petclinic
    app.kubernetes.io/name: java
    app.kubernetes.io/part-of: petclinic-demo
    app.openshift.io/runtime: java
    app.openshift.io/runtime-version: "8"
  name: petclinic
spec:
  host: app-petclinic-dev.apps-crc.testing
  port:
    targetPort: 8080-tcp
  subdomain: ""
  to:
    kind: Service
    name: petclinic
    weight: 100
  wildcardPolicy: None
status:
  ingress:
  - conditions:
    host: app-petclinic-dev.apps-crc.testing
    routerCanonicalHostname: apps-crc.testing
    routerName: default
    wildcardPolicy: None
